NPM Scope Added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "glass",
+	"name": "@lassi/glass",
 	"version": "1.0.0",
 	"description": "Add Glass effects to HTML elements",
 	"author": "Lasindu Nuwanga",
